Nâng cấp chức năng
Nâng cấp chức năng dự toán

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -975,11 +975,13 @@ div[id^="modal-fw-shortcode-design-cost-"] .btn-close,
 .fw-shortcode-estimates .accordion .accordion-button:focus {
 	box-shadow: none;
 }
+.fw-shortcode-estimate-manage .estimate-thumbnail,
 .fw-shortcode-estimates-interior .interior-thumbnail,
 .fw-shortcode-estimates .contractor-thumbnail {
 	padding-bottom: 60%;
 	overflow: hidden;
 }
+.fw-shortcode-estimate-manage .thumbnail-image img,
 .fw-shortcode-estimates .thumbnail-image img {
 	width: 100%;
 	height: 100%;
