--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -869,12 +869,8 @@ div[id^="modal-fw-shortcode-design-cost-"] .btn-close,
 	opacity: 0;
 	visibility: hidden;
 	z-index: 99;
-/*	background: #303030;*/
 }
-/*.actions-fixed .btn {
-	font-size: 14px;
-	font-weight: bold;
-}*/
+
 .actions-fixed.visible {
 	opacity: 1;
 	visibility: visible;
@@ -894,12 +890,6 @@ div[id^="modal-fw-shortcode-design-cost-"] .btn-close,
 	vertical-align: middle;
 	margin-top: -2px;
 }
-/*#contractor-search-result {
-	height: 100%;
-}
-#modal-contractor-search {
-	z-index: 100000;
-}*/
 #contractor-search-input {
 	min-width: 300px;
 }
@@ -924,7 +914,7 @@ div[id^="modal-fw-shortcode-design-cost-"] .btn-close,
 	z-index: 14;
 }
 
-.contractor-thumbnail .entry-thumbnail {
+.contractor-thumbnail .thumbnail-image {
 	
 }
 .contractor-thumbnail .entry-thumbnail > span {
@@ -976,10 +966,13 @@ div[id^="modal-fw-shortcode-design-cost-"] .btn-close,
 	box-shadow: none;
 }
 .fw-shortcode-estimate-manage .estimate-thumbnail,
-.fw-shortcode-estimates-interior .interior-thumbnail,
 .fw-shortcode-estimates .contractor-thumbnail {
 	padding-bottom: 60%;
 	overflow: hidden;
+}
+.fw-shortcode-estimate-manage .thumbnail-image,
+.fw-shortcode-estimates .thumbnail-image {
+	background: rgba(0, 0, 0, 0.1);
 }
 .fw-shortcode-estimate-manage .thumbnail-image img,
 .fw-shortcode-estimates .thumbnail-image img {
