--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,6 +115,12 @@ img.aligncenter {
 	padding-left: 12px;
 	padding-right: 12px;
 }
+.bg-green {
+	background: #0f0;
+}
+.bg-yellow {
+	background: #ff0;
+}
 .bg-red {
 	background-color: #f00;
 }
