--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,6 +99,7 @@ img.aligncenter {
 
 .modal {
 	--bs-modal-margin: 12px;
+	--bs-modal-zindex: 99999;
 }
 .modal-backdrop {
     --bs-backdrop-opacity: 0.85;
@@ -132,6 +133,41 @@ img.aligncenter {
 }
 .text-green {
 	color: #0f0;
+}
+.btn-outline-yellow {
+  --bs-btn-color: #ff0;
+  --bs-btn-border-color: #ff0;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #ff0;
+  --bs-btn-hover-border-color: #ff0;
+  --bs-btn-focus-shadow-rgb: 248, 249, 250;
+  --bs-btn-active-color: #f00;
+  --bs-btn-active-bg: #ff0;
+  --bs-btn-active-border-color: #ff0;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #ff0;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #ff0;
+  --bs-gradient: none;
+}
+.btn-outline-green {
+  --bs-btn-color: #0f0;
+  --bs-btn-border-color: #0f0;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #0f0;
+  --bs-btn-hover-border-color: #0f0;
+  --bs-btn-focus-shadow-rgb: 248, 249, 250;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #0f0;
+  --bs-btn-active-border-color: #0f0;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #0f0;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #0f0;
+  --bs-gradient: none;
+}
+.fs-sm {
+	font-size: 0.875rem;
 }
 #site-header {
 	top: 0;
@@ -465,7 +501,7 @@ video {
 .fw-shortcode-partners .thumbnail-image,
 .fw-shortcode-estimate-manage .thumbnail-image,
 .fw-shortcode-estimates .thumbnail-image {
-	background: rgba(0, 0, 0, 0.1);
+	background: #0e0d0d;
 }
 .fw-shortcode-documents .thumbnail-image img,
 .fw-shortcode-partners .thumbnail-image img,
@@ -481,6 +517,11 @@ video {
 	background: #1c1c1c;
 	font-size: 28px;
 	font-weight: 600;
+	border-bottom: transparent 1px solid;
+}
+.client-heading.is-stuck {
+	border-color: rgb(33 37 41);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
 }
 .contractor-cat-hide .dropdown-toggle::after {
 	display: none;
@@ -511,6 +552,9 @@ label[for="estimate_attachment"] {
 	color: #f00;
 	background: #ff0;
 }
+.estimate-progress {
+	font-size: 14px;
+}
 .estimate-progress .col {
 	height: 40px;
 	line-height: 40px;
@@ -529,6 +573,9 @@ label[for="estimate_attachment"] {
 .estimate-progress .col:last-child::after {
 	display: none;
 }
+/*.filter-progress-item label {
+	vertical-align: middle;
+}*/
 @media (min-width: 375px) {
 	
 }
