--- a/assets/css/manage-efurniture_cat.css
+++ b/assets/css/manage-efurniture_cat.css
@@ -3,6 +3,7 @@
 #slug-description,
 #name-description,
 .term-description-wrap,
-.term-slug-wrap {
+.term-slug-wrap,
+.term-parent-wrap {
 	display: none;
 }
