Nâng cấp chức năng

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -440,6 +440,7 @@ video {
 .fw-shortcode-efurnitures .accordion,
 .fw-shortcode-econstructions .accordion,
 .fw-shortcode-contracts .accordion,
+.fw-shortcode-gzalos .accordion,
 .fw-shortcode-documents .accordion,
 .fw-shortcode-partners .accordion,
 .fw-shortcode-estimate-manage .accordion,
@@ -460,6 +461,7 @@ video {
 .fw-shortcode-efurnitures .accordion .accordion-button,
 .fw-shortcode-econstructions .accordion .accordion-button,
 .fw-shortcode-contracts .accordion .accordion-button,
+.fw-shortcode-gzalos .accordion .accordion-button,
 .fw-shortcode-documents .accordion .accordion-button,
 .fw-shortcode-partners .accordion .accordion-button,
 .fw-shortcode-estimate-manage .accordion .accordion-button,
@@ -472,6 +474,7 @@ video {
 .fw-shortcode-efurnitures .accordion .accordion-button:not(.collapsed),
 .fw-shortcode-econstructions .accordion .accordion-button:not(.collapsed),
 .fw-shortcode-contracts .accordion .accordion-button:not(.collapsed),
+.fw-shortcode-gzalos .accordion .accordion-button:not(.collapsed),
 .fw-shortcode-documents .accordion .accordion-button:not(.collapsed),
 .fw-shortcode-partners .accordion .accordion-button:not(.collapsed),
 .fw-shortcode-estimate-manage .accordion .accordion-button:not(.collapsed),
@@ -481,6 +484,7 @@ video {
 .fw-shortcode-efurnitures .accordion .accordion-button::after,
 .fw-shortcode-econstructions .accordion .accordion-button::after,
 .fw-shortcode-contracts .accordion .accordion-button::after,
+.fw-shortcode-gzalos .accordion .accordion-button::after,
 .fw-shortcode-documents .accordion .accordion-button::after,
 .fw-shortcode-partners .accordion .accordion-button::after,
 .fw-shortcode-estimate-manage .accordion .accordion-button::after,
@@ -490,6 +494,7 @@ video {
 .fw-shortcode-efurnitures .accordion .accordion-item:not(:first-of-type),
 .fw-shortcode-econstrucions .accordion .accordion-item:not(:first-of-type),
 .fw-shortcode-contracts .accordion .accordion-item:not(:first-of-type),
+.fw-shortcode-gzalos .accordion .accordion-item:not(:first-of-type),
 .fw-shortcode-documents .accordion .accordion-item:not(:first-of-type),
 .fw-shortcode-partners .accordion .accordion-item:not(:first-of-type),
 .fw-shortcode-estimate-manage .accordion .accordion-item:not(:first-of-type),
@@ -499,6 +504,7 @@ video {
 .fw-shortcode-efurnitures .accordion .accordion-button:focus,
 .fw-shortcode-econstructions .accordion .accordion-button:focus,
 .fw-shortcode-contracts .accordion .accordion-button:focus,
+.fw-shortcode-gzalos .accordion .accordion-button:focus,
 .fw-shortcode-documents .accordion .accordion-button:focus,
 .fw-shortcode-partners .accordion .accordion-button:focus,
 .fw-shortcode-estimate-manage .accordion .accordion-button:focus,
@@ -508,6 +514,7 @@ video {
 .fw-shortcode-efurnitures .efurniture-thumbnail,
 .fw-shortcode-econstructions .econstruction-thumbnail,
 .fw-shortcode-contracts .contract-thumbnail,
+.fw-shortcode-gzalos .gzalo-thumbnail,
 .fw-shortcode-documents .document-thumbnail,
 .fw-shortcode-partners .partner-thumbnail,
 .fw-shortcode-estimate-manage .estimate-thumbnail,
@@ -518,6 +525,7 @@ video {
 .fw-shortcode-efurnitures .thumbnail-image,
 .fw-shortcode-econstructions .thumbnail-image,
 .fw-shortcode-contracts .thumbnail-image,
+.fw-shortcode-gzalos .thumbnail-image,
 .fw-shortcode-documents .thumbnail-image,
 .fw-shortcode-partners .thumbnail-image,
 .fw-shortcode-estimate-manage .thumbnail-image,
@@ -527,6 +535,7 @@ video {
 .fw-shortcode-efurnitures .thumbnail-image img,
 .fw-shortcode-econstructions .thumbnail-image img,
 .fw-shortcode-contracts .thumbnail-image img,
+.fw-shortcode-gzalos .thumbnail-image img,
 .fw-shortcode-documents .thumbnail-image img,
 .fw-shortcode-partners .thumbnail-image img,
 .fw-shortcode-estimate-manage .thumbnail-image img,
